--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock-Paper-Scissor</title>
+    <script src="./RPS.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src="./RPS.js"></script>
+    <div>
+        <h1>Rock-Paper-Scissor Game</h1>
+    </div>
+    <div>
+        <button type="button">Rock</button><br>
+        <button type="button">Paper</button><br>
+        <button type="button">Scissors</button><br>
+    </div>
+    <div id="result" style="margin-top: 20px; font-size: 18-x; font-weight: bold;"> </div>
+    <div id="score" style="margin-top: 10px; font-size: 16px;"></div>
+    <div id="winner" style="margin-top: 20px; font-size: 20px; color: green;"></div>"
 </body>
 </html>
